[gd_scene load_steps=3 format=3 uid="uid://e720mdke8iva"]

[ext_resource type="Script" uid="uid://rj16f7m6wdy7" path="res://algorithms/spacetopology/convexhull/ConvexHull.gd" id="1_hull"]
[ext_resource type="Script" uid="uid://hipxqi4sbma7" path="res://algorithms/spacetopology/convexhull/ConvexHullVisualizer.gd" id="2_visual"]

[node name="ConvexHull" type="Node3D"]
script = ExtResource("1_hull")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="HullVisualizer" type="Node3D" parent="."]
script = ExtResource("2_visual")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_vertical = 0

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Convex Hull Algorithm Visualization
- 3D point cloud generation
- Graham scan algorithm
- Real-time hull computation
- Interactive point manipulation"
horizontal_alignment = 1

[node name="PointCountSlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
min_value = 5.0
max_value = 50.0
value = 15.0

[node name="PointCountLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Point Count: 15"

[node name="DistributionSlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.1
value = 1.0

[node name="DistributionLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Distribution: Normal"

[node name="AlgorithmSlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
max_value = 2.0

[node name="AlgorithmLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Algorithm: Graham Scan"

[node name="GenerateButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Generate New Points"

[node name="ComputeHullButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Compute Convex Hull"

[node name="ClearButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Clear All"
